# -b2b-lead-hunter-skill

./: .clinerules  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  SKILL.md  pyproject.toml  requirements.txt
_shared/: README.md
example/: brief.json  queries.csv  sender-profile.json
references/: chinese-ai-startup-leads.md  chinese-founder-contact-discovery.md  company-website-research.md  compliance-boundaries.md  consumer-electronics-insights.md  contact-discovery-from-pdfs-and-directories.md  customs-verification.md  decision-maker-discovery.md  decisions.md  email-localization.md  fastener-distributor-insights.md  lead-source-channels.md  orchestrator-boundary.md  output-schema.md  outreach-compliance.md  outreach-parameter-guide.md  outreach-workflow.md  query-lanes.md  reference-router.md  region-language-map.md  scoring-rubric.md  search-fallback.md  search-resilience.md  smtp-163.md  smtp-qq-exmail.md  smtp-quirks.md  smtp-troubleshooting.md  workflow.md
scripts/: contracts.py  customs_verify.py  dedupe_leads.py  enrich_decision_makers.py  evaluate_outreach_drafts.py  export_leads.py  extract_contacts.py  generate_outreach_drafts.py  generate_outreach_templates.py  infer_email.py  linkedin_dm_search.py  normalize_search_results.py  prepare_outreach.py  read_jina.py  run_hunt.py  send_smtp.py  serper_maps.py  validate_artifact.py
templates/: brief.schema.json  customs-verification.schema.json  decision-maker.schema.json  email-template.example.md  hunt-input.example.json  lead-output.schema.json  outreach-candidate.schema.json  (+11 more)
(+2 files in other folders)
